--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bagel</title>
-    <link rel="stylesheet" type="text/css" href="../static/style.css"> 
+    <title>px_finder_server</title>
 </head>
 	
 	<body>
     <form action="" method="POST">
-      <input type="text" name="name" value="sus">
+      <input type="text" name="name" value="test">
 
       <input type="Submit" value="send" class="sptv-button">
     </form>
