--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 	
 	<body>
     <form action="" method="POST">
-      <input type="text" name="name" value="test">
+      <input type="text" name="name" value="">
 
       <input type="Submit" value="send" class="sptv-button">
     </form>
