--- a/_website_/style.css
+++ b/_website_/style.css
@@ -40,6 +40,17 @@ h1{
     font-size: 50px;
     text-align: center;
 }
+select{
+    font-weight: bold;
+    color: #cfcfcf;
+    border-radius: 20px;
+    border: #cfcfcf8e solid;
+    font-size: 50px;
+    background: none;
+}
+option{
+    background-color: #1f2125;
+}
 h2{
     font-size: 40px;
     text-align: center;
@@ -77,7 +88,7 @@ h2{
 }
 .pfp{
     position: absolute;
-    left: 2175px;
+    left: calc(2175px + var(--offset_x));
     top: 100px;
     height: 450px;
     width: 450px;
@@ -85,7 +96,7 @@ h2{
 .nickname{
     position: absolute;
     margin: 0px 25px 0px 25px;
-    left: 2000px;
+    left: calc(2000px + var(--offset_x));
     top: 600px;
     width: 750px;
     text-align: center;
@@ -98,7 +109,7 @@ h2{
 .data{
     font-weight: bold;
     position: absolute;
-    left: 2100px;
+    left: calc(2100px + var(--offset_x));
     top: 770px;
     line-height: 100px;
     font-size: 60px;
@@ -136,6 +147,7 @@ strong, .timer{
 }
 
 :root {
+    --offset_x: 0px;
     --circle: hsla(var(--c3));
     --circle0: hsla(var(--c0));
     --circle1: hsla(var(--c1));
@@ -208,8 +220,9 @@ strong, .timer{
     border-radius: 20px;
     padding: 15px;
     text-align: center;
-   
+    max-width: 95%;
 }
+
 
 .button {
     padding: 3px 0px 3px 0px;
@@ -285,6 +298,7 @@ label{
 code{
     overflow-wrap: break-word;
 }
-h3{
+h3, h4{
+    text-align: center;
     margin: 0;
 }
